# glade-backup

./: Backup.cpp  Backup.h  CMakeLists.txt  main.cpp  mainUI.glade
aes/: AES.cpp  AES.h  AESMatrices.h
common/: BitStream.cpp  BitStream.h  DataTypes.h  File.cpp  File.h  Optional.h  Platform.h  Stream.cpp  Stream.h
compress/: Compress.h  HuffmanTree.h
pack/: Pack.cpp  Pack.h
ui/: MainWindow.cpp  MainWindow.h
utils/: NamespaceDecl.h  Timer.cpp  Timer.h  Win32Util.cpp  Win32Util.h
